Worked on Front-End
- Added background image to login and signup pages
- Welcome screen is displayed as the first page until the user taps the Get Started button
- Splitted angularjs controllers to individual files

--- a/Mobile_App/www/index.html
+++ b/Mobile_App/www/index.html
@@ -59,6 +59,19 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/newsFeedCtrl.js"></script>
+    <script src="js/controllers/addSourcesCtrl.js"></script>
+    <script src="js/controllers/articleCtrl.js"></script>
+    <script src="js/controllers/editProfileCtrl.js"></script>
+    <script src="js/controllers/eyeReaderCtrl.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/profileCtrl.js"></script>
+    <script src="js/controllers/reportArticleCtrl.js"></script>
+    <script src="js/controllers/savedArticlesCtrl.js"></script>
+    <script src="js/controllers/settingsCtrl.js"></script>
+    <script src="js/controllers/signupCtrl.js"></script>
+    <script src="js/controllers/statisticsCtrl.js"></script>
+    <script src="js/controllers/welcomeCtrl.js"></script>
     <script src="js/routes.js"></script>
 
     <script src="js/directives.js"></script>
