--- a/Mobile_App/www/index.html
+++ b/Mobile_App/www/index.html
@@ -72,6 +72,7 @@
     <script src="js/controllers/signupCtrl.js"></script>
     <script src="js/controllers/statisticsCtrl.js"></script>
     <script src="js/controllers/welcomeCtrl.js"></script>
+    <script src="js/controllers/tutorialCtrl.js"></script>
     <script src="js/routes.js"></script>
 
     <script src="js/directives.js"></script>
