--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8' />
-  <title>eyeReader 0.0.1 | Documentation</title>
+  <title>  | Documentation</title>
   <meta name='viewport' content='width=device-width,initial-scale=1'>
   <link href='assets/bass.css' type='text/css' rel='stylesheet' />
   <link href='assets/style.css' type='text/css' rel='stylesheet' />
@@ -13,8 +13,8 @@
     <div class='flex'>
       <div id='split-left' class='overflow-auto fs0 height-viewport-100'>
         <div class='py1 px2'>
-          <h3 class='mb0 no-anchor'>eyeReader</h3>
-          <div class='mb1'><code>0.0.1</code></div>
+          <h3 class='mb0 no-anchor'></h3>
+          <div class='mb1'><code></code></div>
           <input
             placeholder='Filter'
             id='filter-input'
@@ -516,6 +516,12 @@
                         href='#newsfeedctrldorefresh'
                         class='regular pre-open'>
                         .doRefresh
+                      </a></li>
+                    
+                      <li><a
+                        href='#newsfeedctrlloadmore'
+                        class='regular pre-open'>
+                        .loadMore
                       </a></li>
                     
                       <li><a
@@ -4511,6 +4517,54 @@ articles.</p>
 
 
   <div class='pre p1 fill-light mt0'>doRefresh()</div>
+  
+  
+
+  
+  
+  
+  
+  
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+</section>
+
+      </div>
+    </div>
+  
+    <div class='border-bottom' id='newsfeedctrlloadmore'>
+      <div class="clearfix small pointer toggle-sibling">
+        <div class="py1 contain">
+            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
+            <span class='code strong strong truncate'>loadMore()</span>
+        </div>
+      </div>
+      <div class="clearfix display-none toggle-target">
+        <section class='p2 mb2 clearfix bg-white minishadow'>
+
+  
+
+  <p>Implements infinite-scroll functionality. When the bottom 1% of the screen has been reached
+the next x articles [defined by the variable articles_toload_infinite], if they are available, from the
+preloaded articles are added at the bottom of the news feed.</p>
+
+
+  <div class='pre p1 fill-light mt0'>loadMore()</div>
   
   
 
